добавлена возможность создавать запрос вещи и добавлять вещи в ответ на запросы других пользователей. Реализованы тесты