@@ -1,58 +1,80 @@
 package ru.practicum.request;
 
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
+import ru.practicum.exception.NotFoundException;
+import ru.practicum.item.Item;
+import ru.practicum.item.ItemRepository;
 import ru.practicum.user.User;
-import ru.practicum.user.UserService;
+import ru.practicum.user.UserRepository;
 
 import java.util.*;
 
 import java.time.LocalDateTime;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class RequestServiceImpl implements RequestService {
-    private final UserService userService;
-    private final Map<Long, ItemRequest> requests = new HashMap<>();
-    private long nextId = 1;
-
-    @Autowired
-    public RequestServiceImpl(UserService userService) {
-        this.userService = userService;
-    }
+    private final ItemRequestRepository requestRepository;
+    private final ItemRepository itemRepository;
+    private final UserRepository userRepository;
 
     @Override
     public ItemRequestDto create(ItemRequestDto dto, Long userId) {
-        User user = User.builder().id(userId).build(); // минимально
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new NotFoundException("Пользователь не найден"));
+
         ItemRequest request = ItemRequest.builder()
-                .id(nextId++)
                 .description(dto.getDescription())
                 .requestor(user)
                 .created(LocalDateTime.now())
                 .build();
-        requests.put(request.getId(), request);
-        return RequestMapper.toDto(request);
+
+        return RequestMapper.toDto(requestRepository.save(request));
     }
 
     @Override
     public ItemRequestDto getById(Long id, Long userId) {
-        ItemRequest request = requests.get(id);
-        if (request == null) throw new RuntimeException("Запрос не найден");
-        return RequestMapper.toDto(request);
+        ItemRequest request = requestRepository.findById(id)
+                .orElseThrow(() -> new NotFoundException("Запрос не найден"));
+        List<Item> items = itemRepository.findByRequest_Id(request.getId());
+
+        return RequestMapper.toDtoWithItems(request, items);
     }
 
     @Override
     public List<ItemRequestDto> getAllByUser(Long userId) {
-        return requests.values().stream()
-                .filter(r -> r.getRequestor().getId().equals(userId))
-                .map(RequestMapper::toDto)
-                .collect(Collectors.toList());
+        return requestRepository
+                .findAllByRequestorIdOrderByCreatedDesc(userId)
+                .stream()
+                .map(r -> RequestMapper.toDtoWithItems(
+                        r,
+                        itemRepository.findByRequest_Id(r.getId())
+                ))
+                .toList();
     }
 
     @Override
-    public List<ItemRequestDto> getAll() {
-        return requests.values().stream()
-                .map(RequestMapper::toDto)
-                .collect(Collectors.toList());
+    public List<ItemRequestDto> getAll(Long userId, int from, int size) {
+
+        int page = from / size;
+
+        Pageable pageable = PageRequest.of(
+                page,
+                size,
+                Sort.by(Sort.Direction.DESC, "created")
+        );
+
+        return requestRepository
+                .findByRequestorIdNotOrderByCreatedDesc(userId, pageable)
+                .stream()
+                .map(r -> RequestMapper.toDtoWithItems(
+                        r,
+                        itemRepository.findByRequest_Id(r.getId())
+                ))
+                .toList();
     }
 }
